2007-05-28  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/project.c, src/document.c, src/ui_utils.c:
   Show current project name in window title.
 * configure.in, src/Makefile.am:
   Force debug mode for a SVN working copy.


2007-05-26  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/treeviews.c, src/filetypes.c, src/filetypes.h, src/document.c:
   Replace filetype::has_tags member with filetype_has_tags().
 * HACKING:
   Add note about Adding a TagManager parser.


2007-05-26  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/filetypes.c: Ignore case of filename extensions on Windows.
 * src/ui_utils.c: Add missing header file.
 * src/keyfile.c:
   Use current locale as default encoding for new files.
   Don't keep comments in configuration file to work around a bug in
   newer GLib versions.
   If config file doesn't exist, try to load a global one from
   $prefix/share/geany/.
 * src/utils.c:
   Don't create an empty geany.conf as write test, use access() instead.


2007-05-25  Enrico Tröger  <enrico.troeger@uvena.de>

 * data/filetype_extensions.conf, src/filetypes.c, tagmanager/sh.c:
   Add *.ash and *.bash as filetype entensions for filetype SH.
   Add ash and wish to the shebang patterns.
 * geany.glade, src/callbacks.c, src/callbacks.h, src/geany.h,
   src/interface.c, src/main.c, src/ui_utils.c:
   Improve sensitivity of recent files sub menus.
 * src/filetypes.c: Add shebang-like detection for XML files.


2007-05-25  Nick Treleaven  <nick.treleaven@btinternet.com>

 * doc/geany.docbook:
   Comment out stopping make process.
   Remove note about editing build commands manually.
 * src/build.c, doc/geany.docbook:
   Add support for %e, %f in project run command.
 * src/about.c:
   Show SVN revision as '>=' because 'svn up' may not have caused a
   re-run of configure.
   Show build date as 'on or after' compilation of about.o.


2007-05-24  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/utils.h: