@@ -1,5 +1,5 @@
 /*
- *      sci_cb.h - this file is part of Geany, a fast and lightweight IDE
+ *      editor.h - this file is part of Geany, a fast and lightweight IDE
  *
  *      Copyright 2005-2007 Enrico Tröger <enrico.troeger@uvena.de>
  *      Copyright 2006-2007 Nick Treleaven <nick.treleaven@btinternet.com>
@@ -51,43 +51,43 @@ on_editor_button_press_event           (GtkWidget *widget,
 // callback func called by all editors when a signal arises
 void on_editor_notification(GtkWidget* editor, gint scn, gpointer lscn, gpointer user_data);
 
-gboolean sci_cb_start_auto_complete(gint idx, gint pos, gboolean force);
+gboolean editor_start_auto_complete(gint idx, gint pos, gboolean force);
 
-void sci_cb_close_block(gint idx, gint pos);
+void editor_close_block(gint idx, gint pos);
 
-gboolean sci_cb_auto_forif(gint idx, gint pos);
+gboolean editor_auto_forif(gint idx, gint pos);
 
-void sci_cb_auto_latex(gint idx, gint pos);
+void editor_auto_latex(gint idx, gint pos);
 
-void sci_cb_show_macro_list(ScintillaObject *sci);
+void editor_show_macro_list(ScintillaObject *sci);
 
 /* Reads the word at given cursor position and writes it into the given buffer. The buffer will be
  * NULL terminated in any case, even when the word is truncated because wordlen is too small.
  * position can be -1, then the current position is used.
  * wc are the wordchars to use, if NULL, GEANY_WORDCHARS will be used */
-void sci_cb_find_current_word(ScintillaObject *sci, gint pos, gchar *word, size_t wordlen,
+void editor_find_current_word(ScintillaObject *sci, gint pos, gchar *word, size_t wordlen,
 							  const gchar *wc);
 
-gboolean sci_cb_show_calltip(gint idx, gint pos);
+gboolean editor_show_calltip(gint idx, gint pos);
 
-void sci_cb_do_comment_toggle(gint idx);
+void editor_do_comment_toggle(gint idx);
 
-void sci_cb_do_comment(gint idx, gint line, gboolean allow_empty_lines);
+void editor_do_comment(gint idx, gint line, gboolean allow_empty_lines);
 
-void sci_cb_do_uncomment(gint idx, gint line);
+void editor_do_uncomment(gint idx, gint line);
 
-void sci_cb_highlight_braces(ScintillaObject *sci, gint cur_pos);
+void editor_highlight_braces(ScintillaObject *sci, gint cur_pos);
 
-void sci_cb_auto_table(ScintillaObject *sci, gint pos);
+void editor_auto_table(ScintillaObject *sci, gint pos);
 
-gboolean sci_cb_lexer_is_c_like(gint lexer);
+gboolean editor_lexer_is_c_like(gint lexer);
 
-gint sci_cb_lexer_get_type_keyword_idx(gint lexer);
+gint editor_lexer_get_type_keyword_idx(gint lexer);
 
-void sci_cb_insert_multiline_comment(gint idx);
+void editor_insert_multiline_comment(gint idx);
 
-void sci_cb_select_word(ScintillaObject *sci);
+void editor_select_word(ScintillaObject *sci);
 
-void sci_cb_insert_alternative_whitespace(ScintillaObject *sci);
+void editor_insert_alternative_whitespace(ScintillaObject *sci);
 
 #endif
