@@ -46,7 +46,7 @@ CCFLAGS=-Wall -O2 -g -mms-bitfields $(DEFINES) $(INCLUDEDIRS)
 
 OBJS = treeviews.o templates.o encodings.o about.o prefs.o win32.o build.o msgwindow.o dialogs.o \
 	filetypes.o interface.o main.o support.o callbacks.o utils.o ui_utils.o socket.o \
-	highlighting.o sci_cb.o document.o sciwrappers.o keyfile.o keybindings.o search.o notebook.o \
+	highlighting.o editor.o document.o sciwrappers.o keyfile.o keybindings.o search.o notebook.o \
 	symbols.o tools.o project.o
 
 .c.o:
